...
    @IBAction func backButtonDidTouch(_ sender: UIButton) {
        _ = self.navigationController?.popViewController(animated: true)
    }

    @IBAction func tapGestureDidRecognize(_ sender: UITapGestureRecognizer) {
        let actionController = PeriscopeActionController()
        actionController.headerData = "Are you sure you want to block?"
        actionController.addAction(Action("Block user", style: .destructive, handler: { action in
        }))
        actionController.addSection(PeriscopeSection())
        actionController.addAction(Action("Cancel", style: .cancel, handler: { action in
        }))
        present(actionController, animated: true, completion: nil)
    }
...
