...
    @IBAction func backButtonDidTouch(sender: UIButton) {
        navigationController?.popViewControllerAnimated(true)
    }
    
    @IBAction func tapGestureDidRecognize(sender: UITapGestureRecognizer) {
        let actionController = SpotifyActionController()
        actionController.headerData = SpotifyHeaderData(title: "The Fast And The Furious Soundtrack Collection", subtitle: "Various Artists", image: UIImage(named: "sp-header-icon")!)
        actionController.addAction(Action(ActionData(title: "Save Full Album", image: UIImage(named: "sp-add-icon")!), style: .Default, handler: { action in }))
        actionController.addAction(Action(ActionData(title: "Remove", image: UIImage(named: "sp-remove-icon")!), style: .Default, handler: { action in }))
        actionController.addAction(Action(ActionData(title: "Share", image: UIImage(named: "sp-share-icon")!), style: .Default, handler: { action in }))
        actionController.addAction(Action(ActionData(title: "Go to Album", image: UIImage(named: "sp-view-album-icon")!), style: .Default, handler: { action in }))
        actionController.addAction(Action(ActionData(title: "Start radio", image: UIImage(named: "sp-radio-icon")!), style: .Default, handler: { action in }))
        

        presentViewController(actionController, animated: true, completion: nil)
    }
}
...
